Update hoverflow - Fix ornicar#10327
Do not hide the scrollbar.

--- a/ui/common/css/abstract/_mixins.scss
+++ b/ui/common/css/abstract/_mixins.scss
@@ -31,16 +31,6 @@
 
 @mixin hoverflow {
   overflow-y: auto;
-
-  @media (hover: hover) {
-    &:not(:hover) {
-      scrollbar-width: none;
-
-      &::-webkit-scrollbar {
-        display: none;
-      }
-    }
-  }
 }
 
 @mixin hide {
